--- a/src/ihm/VueModification.form
+++ b/src/ihm/VueModification.form
@@ -99,6 +99,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Annuler"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton_annulerActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
